--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CraftED</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.svg" type="image/svg">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!---->
@@ -22,13 +24,14 @@
                 <div class="main_menu">
                     <a href="#ha" >Главная</a>
                     <a href="#ca" >Заказчик</a>
-                    <a href="#" >О проекте</a>
+                    <a href="#pro" >О проекте</a>
                     <a href="#" >Отзыв</a>  
                 </div>
                 <button class="btn">Связаться с нами</button>
             </div>  
         </div>    
     </header>
+
     <section id="ha" class="home">
         <div class="container">
             <div class="title">
@@ -64,6 +67,54 @@
                 </div>    
              </div>   
         </div>
-    </section>        
-</body>
+    </section>    
+    
+    <section id="pro" class="project">
+        <div class="container">
+            <h2>О проекте</h2>
+            <div class="project_gen">
+                <div class="text"><p>Just CraftED - играем с пользой, учимся с удовольствием!</p></div>
+                <div class="slider">
+
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>  
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="img/slide1.png" alt="">
+                    </div> 
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
+
+  </body>  
 </html>
