--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 </head>
 <body>
     <!---->
-    <header>
+    <header id="head">
         <div class="container">
             <div class="main">
                 <div class="logo">
                     <img src="img/logo.svg" alt="">
                 </div>
                 <div class="main_menu">
-                    <a href="#ha" >Главная</a>
+                    <a href="#head" >Главная</a>
                     <a href="#ca" >Заказчик</a>
                     <a href="#pro" >О проекте</a>
-                    <a href="#" >Отзыв</a>  
+                    <a href="#rv" >Отзыв</a>  
                 </div>
-                <button class="btn">Связаться с нами</button>
+                <a class="btn"href="#cont">Связаться с нами</a>
             </div>  
         </div>    
     </header>
@@ -42,7 +42,7 @@
                         так полюбившемся детьми блочном мире с видеокурсами 
                         от Фоксфорда - лидера в сфере дошкольного и школьного образования в России и СНГ.
                     </p>
-                    <button>Связаться с нами</button>
+                    <a class="btn"href="#cont">Связаться с нами</a>
                 </div>
                 <div class="photo">
                     <img src="img/box1.png" alt="">
@@ -112,6 +112,181 @@
         </div>
     </section>
 
+    <section class="tasks">
+        <div class="container">
+            <h2>Задачи</h2>
+            <div class="tasks_gen">
+                <div class="task">
+                    <img src="img/tasks.png" alt="">
+                    <h3>Название</h3>
+                    <p>Описание</p>
+                </div>
+                <div class="task">
+                    <img src="img/tasks.png" alt="">
+                    <h3>Название</h3>
+                    <p>Описание</p>
+                </div>
+                <div class="task">
+                    <img src="img/tasks.png" alt="">
+                    <h3>Название</h3>
+                    <p>Описание</p>
+                </div>
+                <div class="task">
+                    <img src="img/tasks.png" alt="">
+                    <h3>Название</h3>
+                    <p>Описание</p>
+                </div>
+                <div class="task">
+                    <img src="img/tasks.png" alt="">
+                    <h3>Название</h3>
+                    <p>Описание</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="dev_st">
+        <div class="container">
+            <div class="dev">
+                <h2>Этапы разработки</h2>
+
+                <div class="dev_blocks1">
+                    <div class="dev_block1">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                    <img src="img/arrow_right.svg" alt="">
+                </div>
+
+                <div class="dev_blocks2">
+                    <img src="img/arrow_left.svg" alt="">
+                    <div class="dev_block2">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                </div>
+
+                <div class="dev_blocks1">
+                    <div class="dev_block1">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                    <img src="img/arrow_right.svg" alt="">
+                </div>
+
+                <div class="dev_blocks2">
+                    <img src="img/arrow_left.svg" alt="">
+                    <div class="dev_block2">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                </div>
+
+                <div class="dev_blocks1">
+                    <div class="dev_block1">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                    <img src="img/arrow_right.svg" alt="">
+                </div>
+
+                <div class="dev_blocks2">
+                    <div class="dev_block2">
+                        <h3>Название</h3>
+                        <p>Описание</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="mod">
+        <div class="container">
+            <div class="mod_gen">
+                <h2>3D Модель</h2>
+                <div class="sketchfab-embed-wrapper">
+                     <iframe title="sword" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1280" height="720" src="https://sketchfab.com/models/cb3816749f384011b536f93021c2270d/embed"> 
+                     </iframe> 
+                     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="rez">
+        <div class="container">
+            <div class="rez_gen">
+                <h2>Результат</h2>
+                <div class="rez_video">
+                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/bI3bAl5j9Qg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="rv" class="rev">
+        <div class="container">
+            <div class="rev_gen">
+                <h2>Отзыв</h2>
+                <div class="rev_block">
+                    <div class="rev_img">
+                        <img src="img/rev_img.png" alt="">
+                    </div>
+                        <div class="rev_text">
+                        <h3>Текст</h3>
+                        <p>Текст Текст Текст Текст Текст Текст Текст Текст</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="cont" class="con">
+        <div class="container">
+            <div class="con_gen">
+                <h2>Связаться с  нами </h2>
+                <div class="con_in">
+                    <div class="inp">
+                        <form>
+                            <label for="name"></label>
+                            <input type="text" id="name" placeholder="Имя">
+                        </form>
+                        <form>
+                            <label for="name"></label>
+                            <input type="email" id="email" placeholder="Email">
+                        </form>
+                        <form>
+                            <label for="name"></label>
+                            <input type="tel" id="name" placeholder="Номер телефона">
+                        </form>      
+                    </div>
+                    <img src="img/con_img.png" alt="">
+                </div>
+                <a class="btn" id="btn1" href="#cont">Связаться с нами</a>
+            </div>
+        </div>
+    </section>
+    
+    <footer>
+        <div class="container">
+            <div class="main">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
+                </div>
+                <div class="footer_text">
+                    <p>Lorem ipsum dolor sit amet</p> 
+                </div>
+                <div class="footer_url">
+                    <a class="fot"><img src="img/footer_img.png" alt=""></a>
+                    <a class="fot"><img src="img/footer_img.png" alt=""></a>
+                    <a class="fot"><img src="img/footer_img.png" alt=""></a>
+                </div>    
+            </div>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/main.js"></script>
